--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="main--container--article">
                     <article>
                         <h3> Rolling stone</h3>
-                        <img class="main--img--squiggle" src="assets/squiggle_line.svg" alt="Squiggle line">
+                        <img class="main--img--squiggle" src="assets/squiggle_line.svg" alt="Squiggle line"/>
                         <p>You know Rolling Stone. It's the definitive voice in music, politics and culture it's a
                             global icon.</p>
                         <a class="main--link" href="#">VIEW PROJECT</a>
@@ -60,7 +60,7 @@
     </span>
                     <article>
                         <h3> Variety </h3>
-                        <img class="main--img--squiggle" src="assets/squiggle_line.svg" alt="Squiggle line">
+                        <img class="main--img--squiggle" src="assets/squiggle_line.svg" alt="Squiggle line"/>
                         <p>Variety is an industry leader for breaking entertainment news, review and box office results
                             with archive of content dating back to 1905</p>
                         <a class="main--link" href="#">VIEW PROJECT</a>
@@ -70,7 +70,7 @@
                 <div class="main--container--article">
                     <article>
                         <h3>Worth</h3>
-                        <img class="main--img--squiggle" src="assets/squiggle_line.svg" alt="Squiggle line">
+                        <img class="main--img--squiggle" src="assets/squiggle_line.svg" alt="Squiggle line"/>
                         <p>A global media platform connection a community that embraces worth beyond wealth</p>
                         <a class="main--link" href="#">VIEW PROJECT</a>
                     </article>
@@ -84,7 +84,7 @@
             <div class="main--container--article--border--flex">
                 <article class="main--container--article--border"><img src="assets/icon_web-design.svg"
                                                                        alt="logo webdesign"
-                                                                       class="main--container--article--border--img">
+                                                                       class="main--container--article--border--img"/>
                     <h4 class="main--container--article--h4"> Web Design </h4> Good web design is how companies stand
                     out from their competitors. High quality web design leads to increased user conversion and
                     engagement. Through a proven web design process, we help clients launch websites and products that
@@ -92,7 +92,7 @@
                 </article>
                 <article class="main--container--article--border"><img src="assets/icon_web-development.svg"
                                                                        alt="computer"
-                                                                       class="main--container--article--border--img">
+                                                                       class="main--container--article--border--img"/>
                     <h4 class="main--container--article--h4">Web Development</h4> Modern websites need to be responsive
                     and fully functional at all sizes. We develop all of our sites with a mobile first approach and
                     ensure that our code quality is clean, organized and performant. Already have a design but need it
@@ -100,7 +100,7 @@
                 </article>
                 <article class="main--container--article--border"><img src="assets/icon_ux.svg"
                                                                        alt="logo user-experience"
-                                                                       class="main--container--article--border--img">
+                                                                       class="main--container--article--border--img"/>
                     <h4 class="main--container--article--h4">User Experience</h4> In order to build successful products
                     you have to understand the user. We create user personas, wireframes and prototypes to test with
                     users. This allows us to gather feedback which helps to shape the product and can quickly eliminate
@@ -108,7 +108,7 @@
                 </article>
                 <article class="main--container--article--border"><img src="assets/icon_graphic-design.svg"
                                                                        alt="logo graphic design"
-                                                                       class="main--container--article--border--img">
+                                                                       class="main--container--article--border--img"/>
                     <h4 class="main--container--article--h4">Logo Design + Branding </h4> Nike, Apple, Coca-Cola,
                     Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity.
                     The best brands stand out from the crowd by having a clear and unique point of view. We will work
@@ -117,7 +117,7 @@
                 </article>
                 <article class="main--container--article--border"><img src="assets/icon_seo.svg"
                                                                        alt="logo search engine optimisation"
-                                                                       class="main--container--article--border--img">
+                                                                       class="main--container--article--border--img"/>
                     <h4 class="main--container--article--h4">SEO </h4> Do you want your site to rank higher in search
                     results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about
                     constantly playing catch-up. We will make sure your website it optimized, providing you the best
@@ -125,7 +125,7 @@
                 </article>
                 <article class="main--container--article--border"><img src="assets/icon_copywriting.svg"
                                                                        alt="logo copywriting"
-                                                                       class="main--container--article--border--img">
+                                                                       class="main--container--article--border--img"/>
                     <h4 class="main--container--article--h4">Copy Writing</h4> Brand messaging needs to be clear, direct
                     and easy to understand to be effective. A unique tone of voice will help you stand out from the
                     crowd and build brand loyalty. We work with you to establish your brand bible and ensure your
